fix gap

--- a/src/assets/styles/components/task-details.scss
+++ b/src/assets/styles/components/task-details.scss
@@ -70,7 +70,7 @@
   .task-body {
     display: grid;
     grid-template-columns: 3fr 1fr;
-    gap: 10px;
+    gap: 16px;
     margin-top: 10px;
 
     .task-body-content {
